--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -50,6 +50,8 @@
 
     height: 40px;
     width: 40px;
+
+    cursor: pointer;
 }
 
 .btn:hover {
@@ -84,6 +86,8 @@
     background-color: white;
 
     border: 2px solid;
+
+    cursor: pointer;
 }
 
 .dot:hover {
@@ -96,4 +100,35 @@
 
 .dot.current {
     background-color: green;
+}
+
+.popup-wrp {
+
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+
+    position: absolute;
+
+    top: 0;
+
+    align-items: center;
+    justify-content: center;
+
+    background-color: rgba(0,0,0,0.4);
+
+    visibility: hidden;
+}
+
+.popup {
+    padding: 10px 20px;
+    background-color: white;
+    border-radius: 5px;
+
+    z-index: 1;
+}
+
+main {
+    filter: none;
 }
