--- a/sliderGV/css/style.css
+++ b/sliderGV/css/style.css
@@ -1,98 +1,99 @@
 p {
-    margin: 0;
+  margin: 0;
 }
 
 .main {
-    max-width: 1440px;
-    width: 100%;
-
-    margin: 0 auto;
-
-    font-family: 'Inter', sans-serif;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 16px;
+  font-family: "Inter", sans-serif;
 }
 
 .section_header {
-    margin-bottom: 24px;
-
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 25px;
-    font-weight: 700;
+  margin-bottom: 24px;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 700;
+}
+@media (max-width: 860px) {
+  .section_header {
+    font-size: 16px;
+  }
 }
 
 .slider__wrp {
-    display: flex;
-    gap: 18px;
+  display: flex;
+  gap: 18px;
 }
-
+@media (max-width: 860px) {
+  .slider__wrp {
+    flex-direction: column;
+  }
+}
 .slider__img-wrp {
-    max-width: 711px;
-
-    border-radius: 10px;
-
-    overflow: hidden;
+  max-width: 711px;
+  border-radius: 10px;
+  overflow: hidden;
 }
-
+@media (max-width: 860px) {
+  .slider__img-wrp {
+    max-width: none;
+  }
+}
+.slider__mobile-img-wrp {
+  display: flex;
+}
 .slider__img {
-    width: 100%;
-
-    display: none;
+  width: 100%;
+  display: none;
 }
-
-.slider__img.active {
+@media (max-width: 860px) {
+  .slider__img {
     display: block;
+  }
 }
-
+.slider__img.active {
+  display: block;
+}
 .slider__section {
-    max-height: 39px;
-
-    overflow: hidden;
-
-    transition-duration: 0.8s;
+  max-height: 23px;
+  width: 100%;
+  padding-bottom: 16px;
+  overflow: hidden;
+  transition-duration: 0.5s;
+  border-bottom: 1px solid transparent;
 }
-
 .slider__section.active {
-    max-height: 300px;
-
-    padding-bottom: 16px;
-
-    border-bottom: 1px solid #C4C4C4;
-
-    transition-duration: 0.8s;
+  max-height: 300px;
+  border-bottom: 1px solid #C4C4C4;
+  transition-duration: 0.5s;
 }
-
 .slider__section-header-wrp {
-    padding: 8px 0;
-
-    display: flex;
-    gap: 16px;
-
-    font-size: 20px;
-    font-weight: 700;
-
-    cursor: pointer;
+  padding: 8px 0;
+  display: flex;
+  gap: 16px;
+  font-size: 20px;
+  font-weight: 700;
+  cursor: pointer;
 }
-
 .slider__section-number {
-    color: #8A8A8A;
+  color: #8A8A8A;
 }
-
 .slider__section-text-header {
-    color: #393D38;
+  color: #393D38;
+  transition-duration: 0.2s;
 }
-
 .slider__section.active .slider__section-text-header {
-    color: #009B3E;
+  color: #009B3E;
+  transition-duration: 0.2s;
 }
-
 .slider__section-text-wrp {
-    padding-left: 40px;
+  padding-left: 40px;
 }
-
 .slider__section-text {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
-
 .slider__section-link {
-    color: #009B3E;
-}
+  color: #009B3E;
+}/*# sourceMappingURL=style.css.map */
