--- a/sliderGV/css/style.css
+++ b/sliderGV/css/style.css
@@ -58,16 +58,33 @@ p {
 }
 .slider__section {
   max-height: 23px;
-  width: 100%;
   padding-bottom: 16px;
   overflow: hidden;
   transition-duration: 0.5s;
   border-bottom: 1px solid transparent;
 }
+@media (max-width: 860px) {
+  .slider__section {
+    max-height: none;
+    padding: 0 16px 24px 16px;
+    box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    border-bottom: none;
+    display: none;
+    opacity: 0;
+  }
+}
 .slider__section.active {
   max-height: 300px;
   border-bottom: 1px solid #C4C4C4;
   transition-duration: 0.5s;
+}
+@media (max-width: 860px) {
+  .slider__section.active {
+    border-bottom: none;
+    display: block;
+    opacity: 1;
+  }
 }
 .slider__section-header-wrp {
   padding: 8px 0;
@@ -80,6 +97,11 @@ p {
 .slider__section-number {
   color: #8A8A8A;
 }
+@media (max-width: 860px) {
+  .slider__section-number {
+    display: none;
+  }
+}
 .slider__section-text-header {
   color: #393D38;
   transition-duration: 0.2s;
@@ -88,8 +110,18 @@ p {
   color: #009B3E;
   transition-duration: 0.2s;
 }
+@media (max-width: 860px) {
+  .slider__section.active .slider__section-text-header {
+    color: #393D38;
+  }
+}
 .slider__section-text-wrp {
   padding-left: 40px;
+}
+@media (max-width: 860px) {
+  .slider__section-text-wrp {
+    padding-left: 0;
+  }
 }
 .slider__section-text {
   margin-bottom: 16px;
