--- a/sliderGV/scss/style.scss
+++ b/sliderGV/scss/style.scss
@@ -39,7 +39,7 @@ p {
 
     &__img-wrp {
         max-width: 711px;
-    
+
         border-radius: 10px;
     
         overflow: hidden;
@@ -69,7 +69,6 @@ p {
     
     &__section {
         max-height: 23px;
-        width: 100%;
     
         padding-bottom: 16px;
     
@@ -78,6 +77,21 @@ p {
         transition-duration: 0.5s;
     
         border-bottom: 1px solid transparent;
+
+        @include __860 {
+            max-height: none;
+
+            padding: 0 16px 24px 16px;
+
+            box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+
+            border-bottom: none;
+
+            display: none;
+
+            opacity: 0;
+        }
     }
     
     &__section.active {
@@ -86,6 +100,14 @@ p {
         border-bottom: 1px solid #C4C4C4;
     
         transition-duration: 0.5s;
+
+        @include __860 {
+            border-bottom: none;
+
+            display: block;
+
+            opacity: 1;
+        }
     }
     
     &__section-header-wrp {
@@ -102,6 +124,10 @@ p {
     
     &__section-number {
         color: #8A8A8A;
+
+        @include __860 {
+            display: none;
+        }
     }
     
     &__section-text-header {
@@ -114,10 +140,18 @@ p {
         color: #009B3E;
     
         transition-duration: 0.2s;
+
+        @include __860 {
+            color: #393D38;
+        }
     }
     
     &__section-text-wrp {
         padding-left: 40px;
+
+        @include __860 {
+            padding-left: 0;
+        }
     }
     
     &__section-text {
