--- a/sliderGV/scss/style.scss
+++ b/sliderGV/scss/style.scss
@@ -199,6 +199,8 @@ p {
         border-radius: 50%;
 
         background: #C4C4C4;
+
+        cursor: pointer;
     }
 
     &__controls-dot.active {
